<resources>
    <string name="app_name">todolist</string>
    <string name="action_settings">Settings</string>

    <string name="note_text">Введите текст заметки</string>
    <string name="note_details_title">Заметка</string>
    <string name="save">Сохранить</string>
    <string name="completed">Выполнение</string>
    <string name="field_name">Название задачи</string>
    <string name="field_describe">Описание задачи</string>
    <string name="field_date">Дата</string>
    <string name="field_time">Время</string>
</resources>
